--- a/AddonLoader ReadMe.html
+++ b/AddonLoader ReadMe.html
@@ -1,1 +1,1 @@
-<html><head><title>ForkliftGnome:Redirecting to Wowace Wiki</title><META HTTP-EQUIV="Refresh" CONTENT="1; URL=http://www.wowace.com/wiki/AddonLoader"></head></html>
+<html><head><title>AddonLoader:Redirecting to Wowace Wiki</title><META HTTP-EQUIV="Refresh" CONTENT="1; URL=http://www.wowace.com/wiki/AddonLoader"></head></html>
